// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) > 경계 — page=0 은 숫자라 경고 없이 1페이지 [BR-14] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 기본 검색 2페이지: 전체 20건이라 빈 표 [BR-14 · BR-15 · BR-16] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 "05" 는 정규식은 틀리지만 정수 5 로 조회된다 [BR-04] 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 0 (허용 범위 바로 아래) [BR-04] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 1 (허용 범위 아래 끝) [BR-03] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 5 를 명시하면 나온다 (기본 검색은 level < 5) [BR-02 · BR-03] 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 6 (허용 범위 바로 위) [BR-04] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 난이도 정렬 방향 생략 시 내림차순 [BR-12] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 단원 정렬 내림차순: 보조 정렬은 level DESC, id ASC [BR-12] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 등록일 정렬 오름차순, 같은 시각이면 id 순 [BR-12] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 키워드 101자는 100자로 잘려 조회된다 [BR-05] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 경계 — 키워드 정확히 100자는 자르지 않는다 [BR-05] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈값 — level= 은 파라미터 없음과 같은 level < 5 [BR-02] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈값 — q · unit · tag 모두 빈 문자열 [BR-02 · BR-05 · BR-07 · BR-09] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 빈값 — 공백만 있는 키워드는 trim 되어 조건 없음 [BR-05] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — page=abc 는 1페이지, page=1000 은 999페이지(빈 표) [BR-14 · BR-16] 1`] = `
{
  "abc": {
    "count": 20,
    "message": null,
    "rows": [
      {
        "id": 18,
        "level": 4,
        "tags": [
          "문장제",
          "오답률높음",
        ],
        "title": "분수의 뺄셈 문장제",
        "unit": "M5-1",
      },
      {
        "id": 19,
        "level": 4,
        "tags": [
          "계산",
        ],
        "title": "세 분수의 곱셈",
        "unit": "M5-2",
      },
      {
        "id": 20,
        "level": 4,
        "tags": [
          "문장제",
          "도형",
        ],
        "title": "소수 곱셈 문장제",
        "unit": "M5-3",
      },
      {
        "id": 21,
        "level": 4,
        "tags": [
          "문장제",
          "오답률높음",
        ],
        "title": "분수의 나눗셈 문장제",
        "unit": "M6-1",
      },
      {
        "id": 22,
        "level": 4,
        "tags": [
          "개념",
        ],
        "title": "비례식의 성질",
        "unit": "M6-2",
      },
      {
        "id": 12,
        "level": 3,
        "tags": [
          "계산",
          "오답률높음",
        ],
        "title": "대분수의 덧셈",
        "unit": "M5-1",
      },
      {
        "id": 13,
        "level": 3,
        "tags": [
          "계산",
        ],
        "title": "대분수의 곱셈",
        "unit": "M5-2",
      },
      {
        "id": 14,
        "level": 3,
        "tags": [
          "계산",
        ],
        "title": "소수끼리의 곱셈",
        "unit": "M5-3",
      },
      {
        "id": 15,
        "level": 3,
        "tags": [
          "계산",
          "개념",
        ],
        "title": "자연수를 분수로 나누기",
        "unit": "M6-1",
      },
      {
        "id": 16,
        "level": 3,
        "tags": [
          "문장제",
        ],
        "title": "백분율 구하기",
        "unit": "M6-2",
      },
      {
        "id": 6,
        "level": 2,
        "tags": [
          "계산",
          "오답률높음",
        ],
        "title": "분모가 다른 분수의 덧셈",
        "unit": "M5-1",
      },
      {
        "id": 7,
        "level": 2,
        "tags": [
          "계산",
        ],
        "title": "소수와 자연수의 곱셈",
        "unit": "M5-3",
      },
      {
        "id": 8,
        "level": 2,
        "tags": [
          "개념",
        ],
        "title": "비율을 분수로 나타내기",
        "unit": "M6-2",
      },
      {
        "id": 9,
        "level": 2,
        "tags": [
          "계산",
        ],
        "title": "분수를 자연수로 나누기",
        "unit": "M6-1",
      },
      {
        "id": 10,
        "level": 2,
        "tags": [
          "계산",
        ],
        "title": "진분수끼리의 곱셈",
        "unit": "M5-2",
      },
      {
        "id": 1,
        "level": 1,
        "tags": [
          "계산",
          "개념",
        ],
        "title": "분모가 같은 분수의 덧셈",
        "unit": "M5-1",
      },
      {
        "id": 2,
        "level": 1,
        "tags": [
          "계산",
        ],
        "title": "분모가 같은 분수의 뺄셈",
        "unit": "M5-1",
      },
      {
        "id": 3,
        "level": 1,
        "tags": [
          "계산",
        ],
        "title": "소수 한 자리 수의 곱셈",
        "unit": "M5-3",
      },
      {
        "id": 4,
        "level": 1,
        "tags": [
          "개념",
        ],
        "title": "비의 뜻",
        "unit": "M6-2",
      },
      {
        "id": 5,
        "level": 1,
        "tags": [
          "계산",
        ],
        "title": "분수와 자연수의 곱셈",
        "unit": "M5-2",
      },
    ],
    "status": 200,
  },
  "over": {
    "count": 20,
    "message": null,
    "rows": [],
    "status": 200,
  },
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 모르는 정렬 기준 · 방향은 기본 정렬 [BR-11 · BR-13] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 소문자 단원 코드 m5-1 (경고만, 입력값 그대로 조회) [BR-07] 1`] = `
{
  "count": 5,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 숫자가 아닌 난이도 abc 는 0 으로 조회 [BR-04] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 아주 긴 키워드 1000자 (URL 길이 한도에 걸리는지 포함) [BR-05] 1`] = `
{
  "count": 0,
  "message": null,
  "rows": [],
  "status": 414,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 없는 단원 코드 Z9-9 [BR-08] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 없는 태그 [BR-09 · BR-10] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 음수 난이도 -1 [BR-04] 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 이상값 — 키워드 "%" 는 와일드카드로 전체와 같다 [BR-06] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 단원 M5-1 + 난이도 3 [BR-07 · BR-03] 1`] = `
{
  "count": 1,
  "message": null,
  "rows": [
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 조건 없이 기본 검색 [BR-02 · BR-11 · BR-01] 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 키워드 "분수" 는 제목 또는 지문에서 찾는다 [BR-06] 1`] = `
{
  "count": 13,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > 정상 — 태그 "문장제" 가 붙은 문항 [BR-09 · BR-17] 1`] = `
{
  "count": 4,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
  ],
  "status": 200,
}
`;
